--- a/css/stylecomprar.css
+++ b/css/stylecomprar.css
@@ -64,6 +64,9 @@ footer{
         .acomode-lista{
         font-size: 10px;
         }
+        .center{
+            font-size: 20px;
+        }
 }
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
