--- a/css/stylesnosotros.css
+++ b/css/stylesnosotros.css
@@ -40,3 +40,38 @@ body{
     justify-content: center;
     align-items: center;
 }
+/* mobile */
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    footer {
+        position: fixed;
+        bottom: 0;
+        height: 10px;
+        width: 100%;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        }
+
+    body {
+        overflow-x: hidden;
+        width: 100%;
+        
+    }
+    .productos{
+        width: 100%;
+        
+    }
+    .cajas{
+        margin: 0 5px;
+        margin-bottom: 10px;
+        width: 190px;
+        height: 190px;
+    }
+    .textos-alineados{
+        margin-bottom: 10px;
+    }
+    .imagen-contendora{
+        width: 10px;
+    }
+}
