--- a/css/styles.css
+++ b/css/styles.css
@@ -1,279 +1,440 @@
-/*# sourceMappingURL=styles.css.map */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-@font-face {
-    font-family: "Mustica";
-    src: url(/assets/fuente/MusticaPro-SemiBold.otf);
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style-type: none;
-    padding-right: 10px;
-}
-
-.h1-centrado {
-    position: absolute;
-    top: 10px;
-    left: 820px;
-    color: #a90000;
-    text-shadow: 5px 5px 25px #a90000;
-}
-
-.datos:hover {
-    color: #a90000;
-    text-shadow: 5px 5px 25px #000000;
-}
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
 .header {
-    font-family: "Mustica";
-    background-color: #424141;
-    height: 80px;
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    line-height: 30px;
+  font-family: "Mustica";
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 30px;
 }
-
-.datos {
-    color: white;
-    display: inline-block;
-    justify-content: space-around
+.header .h1-centrado {
+  position: absolute;
+  top: 10px;
+  left: 820px;
+  color: #a90000;
+  text-shadow: 5px 5px 25px #a90000;
 }
 
 body {
-    background-color: #737373;
-    font-family: "Mustica";
-    font-weight: 400;
-    font-style: normal;
-    overflow-x: hidden;
+  background-color: #737373;
+  font-family: "Mustica";
+  font-weight: 400;
+  font-style: normal;
+  overflow-x: hidden;
+}
+body .flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  padding-left: 80px;
+}
+body .flex-container div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4f4f4f;
+  margin: 20px;
+  height: 250px;
+  width: 250px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 10px;
+  color: rgba(0, 0, 0, 0.5803921569);
+}
+body .container-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-right: 30px;
+}
+body .container-2 div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  margin: 20px;
+  height: 590px;
+  width: 250px;
+  border-radius: 30px;
+  border: 1px solid white;
+  box-shadow: 5px 5px 10px;
+  color: rgba(0, 0, 0, 0.5803921569);
+}
+body .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "izq der";
+}
+body .izq {
+  grid-area: izq;
+}
+body .der {
+  grid-area: der;
+}
+body .h1-ultimo-drop {
+  padding-left: 360px;
+  padding-top: 30px;
+  text-shadow: 5px 5px 30px;
+  color: #000000;
+}
+body .h2-mas-vendidos {
+  padding-left: 370px;
+  padding-top: 30px;
+  text-shadow: 5px 5px 30px;
+  color: #000000;
 }
 
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    width: 90%;
-    padding-left: 80px;
-
+.columna {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 40px;
+}
+.columna .blanco {
+  color: #aaaaaa;
+  text-shadow: 5px 5px 10px black;
+  margin-top: 50px;
 }
 
-.flex-container div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #4f4f4f;
-    margin: 20px;
-    height: 250px;
-    width: 250px;
-    border-radius: 30px;
-    box-shadow: 5px 5px 10px;
-    color: #00000094;
+.contenedor {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+.contenedor img {
+  width: 60px;
+  margin-left: 10px;
 }
 
 .footer {
-    background-color: #424242;
-    padding: 1em 0;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+  background-color: #424242;
+  padding: 1em 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
+.container-1 {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+
+img {
+  position: absolute;
+  left: 10;
+  top: 16px;
+}
+
+.flecha img {
+  margin-right: 100px;
+  width: 60px;
+}
+
+.acomode-lista {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 23px;
+  margin-top: 40px;
+}
+
+.contenedor-2 {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+.contenedor-2 img {
+  position: absolute;
+  left: 10;
+  top: 16px;
+  width: 60px;
+}
+
+.imagen-centrada img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+}
+
+.container-1 {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+
+.productos {
+  display: flex;
+  flex-flow: row wrap;
+  width: 1400px;
+  margin: 5% auto;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  display: flex;
+}
+
+.container-3 {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+
+.container-4 {
+  background-color: #424141;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Mustica";
+  flex-direction: row;
+  text-align: center;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  max-width: 1980px;
+}
+
+html {
+  font-size: 62, 5%;
+}
+
+@font-face {
+  font-family: "Mustica";
+  src: url(/assets/fuente/MusticaPro-SemiBold.otf);
+}
 header nav li a {
-    padding: 0 3px;
+  padding: 0 3px;
 }
 
 header nav div img {
-    margin-left: 4px;
+  margin-left: 4px;
 }
 
-.container-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
-    padding-right: 30px;
-
-}
-
-.container-2 div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000000;
-    margin: 20px;
-    height: 590px;
-    width: 250px;
-    border-radius: 30px;
-    border: 1px solid white;
-    box-shadow: 5px 5px 10px;
-    color: #00000094;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: "izq der";
-}
-
-.izq {
-    grid-area: izq;
-}
-
-.der {
-    grid-area: der;
-}
-
-.h1-ultimo-drop {
-    padding-left: 360px;
-    padding-top: 30px;
-    text-shadow: 5px 5px 30px;
-    color: #000000;
-}
-
-.h2-mas-vendidos {
-    padding-left: 370px;
-    padding-top: 30px;
-    text-shadow: 5px 5px 30px;
-    color: #000000;
-}
-
+/*Deje estas clases porque son de boostrap y se buguea al mandarlo al header*/
 .offcanvas {
-    background-color: #424141;
-    width: 100%;
+  background-color: #424141;
+  width: 100%;
 }
 
 .container-fluid {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .menu-derecha {
-    position: absolute;
-    padding-left: 1350px;
-    width: 2000px;
+  position: absolute;
+  padding-left: 1350px;
+  width: 2000px;
+}
+
+/*lo mismo para las 3 paginas (shorts, accesorios, remeras)*/
+.cajas {
+  background-color: #4f4f4f;
+  margin: 30px 70px 5px;
+  height: 250px;
+  width: 250px;
+  border-radius: 30px;
+  line-height: 200px;
+  box-shadow: 5px 5px 10px;
+  color: rgba(0, 0, 0, 0.5803921569);
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  display: flex;
+}
+
+.productos {
+  display: flex;
+  flex-flow: row wrap;
+  width: 1400px;
+  margin: 5% auto;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  text-align: center;
+  display: flex;
+}
+
+.textos-alineados {
+  text-align: center;
+  padding: 0px 30px;
+}
+
+.cajas img {
+  width: 230px;
+}
+
+/*imagen que esta dentro de la caja*/
+.imagen-contendora {
+  width: 150px;
+  height: auto;
+}
+
+.textos-alineados {
+  text-align: center;
+  padding: 0px 30px;
+}
+
+.flecha {
+  margin-left: 10px;
+}
+
+/*acomode de h1*/
+.center {
+  margin: 0 auto;
 }
 
 /* mobile */
 @media screen and (min-width: 320px) and (max-width: 767px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas:
-            "izq"
-            "der";
-    }
-
-    .izq {
-        grid-area: izq;
-    }
-
-    .der {
-        grid-area: der;
-    }
-
-    .h1-ultimo-drop {
-        padding-left: 140px;
-        padding-top: 40px;
-        text-shadow: 5px 5px 30px;
-        color: #000000;
-    }
-    .header{
-        width: 1000%;
-        
-    }
-
-    .h1-centrado {
-        top: 10px;
-        left: 10px;
-        width: 400px;
-        color: #a90000;
-        text-shadow: 5px 5px 25px #a90000;
-    }
-
-    .h2-mas-vendidos {
-        padding-left: 130px;
-        font-size: 30px;
-        padding-top: 10px;
-    }
-
-    .footer {
-        position: fixed;
-        bottom: 0;
-        width: 100px;
-        height: 50px;
-        width: 100%;
-    }
-    .footer p{
-        padding-right: 850px;
-    }
-
-    .container-2 {
-        margin-bottom: 40px;
-        padding-left: 80px;
-    }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "izq" "der";
+  }
+  .izq {
+    grid-area: izq;
+  }
+  .der {
+    grid-area: der;
+  }
+  .h1-ultimo-drop {
+    padding-left: 140px;
+    padding-top: 40px;
+    text-shadow: 5px 5px 30px;
+    color: #000000;
+  }
+  .header {
+    width: 1100%;
+  }
+  .h1-centrado {
+    top: 10px;
+    left: 10px;
+    width: 450px;
+    color: #a90000;
+    text-shadow: 5px 5px 25px #a90000;
+  }
+  .h2-mas-vendidos {
+    padding-left: 130px;
+    font-size: 30px;
+    padding-top: 10px;
+  }
+  .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100px;
+    height: 50px;
+    width: 100%;
+  }
+  .footer p {
+    padding-right: 850px;
+  }
+  .container-2 {
+    margin-bottom: 40px;
+    padding-left: 80px;
+  }
 }
-
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas:
-            "izq"
-            "der";
-    }
-
-    .izq {
-        grid-area: izq;
-    }
-
-    .der {
-        grid-area: der;
-    }
-
-    .h1-ultimo-drop {
-        padding-left: 300px;
-        padding-top: 40px;
-        text-shadow: 5px 5px 30px;
-        color: #000000;
-    }
-
-    .h1-centrado {
-        position: absolute;
-        top: 10px;
-        left: 20px;
-        width: 750px;
-        color: #a90000;
-        text-shadow: 5px 5px 25px #a90000;
-    }
-
-    .h2-mas-vendidos {
-        padding-left: 260px;
-        font-size: 30px;
-    }
-
-    .footer {
-        position: fixed;
-        bottom: 0;
-        height: 50px;
-    }
-
-    .container-2 {
-        margin-bottom: 40px;
-    }
-}
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: "izq" "der";
+  }
+  .izq {
+    grid-area: izq;
+  }
+  .der {
+    grid-area: der;
+  }
+  .h1-ultimo-drop {
+    padding-left: 300px;
+    padding-top: 40px;
+    text-shadow: 5px 5px 30px;
+    color: #000000;
+  }
+  .h1-centrado {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    width: 750px;
+    color: #a90000;
+    text-shadow: 5px 5px 25px #a90000;
+  }
+  header {
+    width: 100%;
+  }
+  .h2-mas-vendidos {
+    padding-left: 260px;
+    font-size: 30px;
+  }
+  .footer {
+    position: fixed;
+    bottom: 0;
+    height: 50px;
+  }
+  .container-2 {
+    margin-bottom: 40px;
+  }
+  .productos {
+    width: 100%;
+    padding-bottom: 400px;
+  }
+  .cajas {
+    margin: 0px;
+  }
+  .textos-alineados {
+    margin: 5px;
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 20px;
+    height: 20px;
+    width: 100%;
+  }
+  footer p {
+    padding-right: 0px;
+  }
+}/*# sourceMappingURL=styles.css.map */
