--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,18 +7,12 @@
 @import 'remeras';
 @import 'shorts';
 @import 'accesorios';
-// @import 'queries';
+@import 'queries';
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
 
 * {
     margin: 0;
     padding: 0;
-    width: auto;
-    max-width: 1980px;
-}
-
-html {
-    font-size: 62, 5%;
 }
 
 @font-face {
@@ -115,147 +109,3 @@ header nav div img {
 }
 
 // --------------------
-
-/* mobile */
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas:
-            "izq"
-            "der";
-    }
-
-    .izq {
-        grid-area: izq;
-    }
-
-    .der {
-        grid-area: der;
-    }
-
-    .h1-ultimo-drop {
-        padding-left: 140px;
-        padding-top: 40px;
-        text-shadow: 5px 5px 30px;
-        color: #000000;
-    }
-
-    .header {
-        width: 1100%;
-
-    }
-
-    .h1-centrado {
-        top: 10px;
-        left: 10px;
-        width: 450px;
-        color: #a90000;
-        text-shadow: 5px 5px 25px #a90000;
-    }
-
-    .h2-mas-vendidos {
-        padding-left: 130px;
-        font-size: 30px;
-        padding-top: 10px;
-
-    }
-
-    .footer {
-        position: fixed;
-        bottom: 0;
-        width: 100px;
-        height: 50px;
-        width: 100%;
-    }
-
-    .footer p {
-        padding-right: 850px;
-    }
-
-    .container-2 {
-        margin-bottom: 40px;
-        padding-left: 80px;
-    }
-}
-
-
-/* tablet */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-template-areas:
-            "izq"
-            "der";
-    }
-
-    .izq {
-        grid-area: izq;
-    }
-
-    .der {
-        grid-area: der;
-    }
-
-    .h1-ultimo-drop {
-        padding-left: 300px;
-        padding-top: 40px;
-        text-shadow: 5px 5px 30px;
-        color: #000000;
-    }
-
-    .h1-centrado {
-        position: absolute;
-        top: 10px;
-        left: 20px;
-        width: 750px;
-        color: #a90000;
-        text-shadow: 5px 5px 25px #a90000;
-    }
-
-    header {
-        width: 100%;
-    }
-
-    .h2-mas-vendidos {
-        padding-left: 260px;
-        font-size: 30px;
-    }
-
-    .footer {
-        position: fixed;
-        bottom: 0;
-        height: 50px;
-    }
-
-    .container-2 {
-        margin-bottom: 40px;
-    }
-
-    .productos {
-        width: 100%;
-        padding-bottom: 400px;
-    }
-
-    .cajas {
-        margin: 0px;
-    }
-
-    .textos-alineados {
-        margin: 5px;
-    }
-
-    footer {
-        position: fixed;
-        bottom: 0;
-        width: 20px;
-        height: 20px;
-        width: 100%;
-    }
-
-    footer p {
-        padding-right: 0px;
-    }
-}
