--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -3,7 +3,7 @@ body {
     font-family: "Mustica";
     font-weight: 400;
     font-style: normal;
-    overflow-x: hidden;
+    overflow: hidden;
     .flex-container {
         display: flex;
         flex-direction: row;
