--- a/scss/_shorts.scss
+++ b/scss/_shorts.scss
@@ -1,10 +1,7 @@
-.container-3{
-    background-color: #424141;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Mustica";
-    flex-direction: row;
-    text-align: center;
+.shorts1{
+    position: absolute;
+    top: 10px;
+    left: 820px;
+    color: #000000;
+    font-size: 35px;
 }
