--- a/scss/_remeras.scss
+++ b/scss/_remeras.scss
@@ -1,11 +1,8 @@
-.container-1 {
-    background-color: #424141;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Mustica";
-    flex-direction: row;
-    text-align: center;
+.remeras1{
+    position: absolute;
+    top: 10px;
+    left: 820px;
+    color: #000000;
+    font-size: 35px;
 }
 
