--- a/scss/_sobrenosotros.scss
+++ b/scss/_sobrenosotros.scss
@@ -1,23 +1,20 @@
-.contenedor-2 {
-    background-color: #424141;
-    height: 80px;
+.sobre-nosotros1{
+    position: absolute;
+    top: 10px;
+    left: 750px;
+    color: #2e2e2e;
+    font-size: 35px;
+    width: 300px;
+}
+.separacion{
+        text-align: center;
+        margin: 60px;
+}
+.imagen-centrada {
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: "Mustica";
-    flex-direction: row;
-    text-align: center;
-    img {
-        position: absolute;
-        left: 10;
-        top: 16px;
-        width: 60px;
-    }
-}
 
-    .imagen-centrada img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    img {
         width: 250px;
     }
+}
